--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.0",
     "knex": "^2.3.0",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "validator": "^13.9.0"
   }
 }
